--- a/package.json
+++ b/package.json
@@ -6,7 +6,17 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest --updateSnapshot"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|@react-native-async-storage/async-storage)"
+    ],
+    "setupFiles": [
+      "./jestSetupFile.ts"
+    ]
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
@@ -17,8 +27,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.0.0-rc.2",
+    "@types/jest": "^29.4.0",
     "@types/react": "~18.0.14",
-    "typescript": "^4.9.4"
+    "jest": "^29.4.3",
+    "jest-expo": "^48.0.1",
+    "react-test-renderer": "^18.2.0",
+    "typescript": "^4.9.4",
+    "whatwg-fetch": "^3.6.2"
   },
   "private": true
 }
